fixed navbar section titles being squished on about + alumni pages

--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -3968,7 +3968,8 @@ tbody.collapse.show {
   display: inline-block;
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
-  margin-right: 1rem;
+  margin-right: 0rem;
+  max-width: 210px;
   font-size: 1.25rem;
   line-height: inherit;
   white-space: nowrap;
@@ -3987,6 +3988,7 @@ tbody.collapse.show {
   -ms-flex-direction: column;
   flex-direction: column;
   padding-left: 0;
+  padding-right: 0;
   margin-bottom: 0;
   list-style: none;
 }
